--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'About' /}
 
-#{welcomemenu id:"start"/}
+#{menu id:"start"/}
 
 <section class="ui center aligned middle aligned segment">
   <h1 class="ui header">
